--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snabbdom-font-awesome",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Draw font-awesome svg with snabbdom",
   "main": "index.js",
   "typings": "index.d.ts",
@@ -24,17 +24,15 @@
   },
   "author": "Ryota Mannari",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "camelcase": "^4.1.0",
     "font-awesome": "^4.7.0",
     "html-to-hyperscript": "^0.8.0",
     "js-beautify": "^1.6.14",
     "ramda": "^0.23.0",
+    "snabbdom": "^0.6.7",
     "svgpath": "^2.2.1",
     "typescript": "^2.3.2",
     "xml2js": "^0.4.17"
-  },
-  "dependencies": {
-    "snabbdom": "^0.6.7"
   }
 }
