--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "html-to-hyperscript": "^0.8.0",
     "js-beautify": "^1.6.14",
     "ramda": "^0.23.0",
-    "snabbdom": "^0.6.7",
     "svgpath": "^2.2.1",
-    "typescript": "^2.3.2",
     "xml2js": "^0.4.17"
+  },
+  "dependencies": {
+    "snabbdom": "^0.6.7",
+    "typescript": "^2.3.2"
   }
 }
